--- a/source/Application/Footstone/View/default/Index/Index.html
+++ b/source/Application/Footstone/View/default/Index/Index.html
@@ -33,19 +33,18 @@
 <link rel="stylesheet" href="__CSS__/style_new.css?{$js_debug}">
 <link rel="stylesheet" href="__CSS__/theme_blue.css?{$js_debug}">
 <link rel="stylesheet" href="__CSS__/hack.css?{$js_debug}">
-<script>
-//全局变量
-var GV = {
-	HOST:"{$_SERVER['HTTP_HOST']}",
-    DIMAUB: "__ROOT__/",
-    JS_ROOT: "statics/js/",
-    TOKEN: ""
-};
-</script>
-<php>$submenus=(array)json_decode($SUBMENU_CONFIG);</php>
+// <script>
+// //全局变量
+// var GV = {
+// 	HOST:"{$_SERVER['HTTP_HOST']}",
+//     DIMAUB: "__ROOT__/",
+//     JS_ROOT: "statics/js/",
+//     TOKEN: ""
+// };
+// </script>
 
-<php>function getsubmenu($submenus){</php>
-<php>foreach($submenus as $menu){ </php>
+<php>function getsubmenu($AllMenu){</php>
+<php>foreach($AllMenu as $menu){ </php>
 					<li>
 						<php>if(empty($menu->items)){</php>
 							<a href="javascript:openapp('{$menu:url}','{$menu:id}','{$menu:name}');">
@@ -59,46 +58,10 @@ var GV = {
 								<b class="arrow fa fa-angle-down"></b>
 							</a>
 							<ul  class="submenu">
-									<php>getsubmenu1((array)$menu->items)</php>
+									<php>getsubmenu((array)$menu->items)</php>
 							</ul>	
 						<php>}</php>
 						
-					</li>
-					
-				<php>}</php>
-<php>}</php>
-
-<php>function getsubmenu1($submenus){</php>
-<php>foreach($submenus as $menu){</php>
-					<li>
-						<php>if(empty($menu->items)){</php>
-							<a href="javascript:openapp('{$menu:url}','{$menu:id}','{$menu:name}');">
-								<i class="fa fa-angle-double-right"></i>
-								<span class="menu-text">{$menu:name}</span>
-							</a>
-						<php>}else{</php>
-							<a href="#" class="dropdown-toggle">
-								<i class="fa fa-angle-double-right"></i>
-								<span class="menu-text">{$menu:name}</span>
-								<b class="arrow fa fa-angle-down"></b>
-							</a>
-							<ul  class="submenu">
-									<php>getsubmenu2((array)$menu->items)</php>
-							</ul>	
-						<php>}</php>
-						
-					</li>
-					
-				<php>}</php>
-<php>}</php>
-
-<php>function getsubmenu2($submenus){</php>
-<php>foreach($submenus as $menu){</php>
-					<li>
-						<a href="javascript:openapp('{$menu:url}','{$menu:id}','{$menu:name}');">
-								<i class="fa fa-leaf"></i>
-								<span class="menu-text">{$menu:name}</span>
-							</a>
 					</li>
 					
 				<php>}</php>
@@ -106,10 +69,10 @@ var GV = {
 
 
 <if condition="APP_DEBUG">
-<style>
-#think_page_trace_open{left: 0 !important;
-right: initial !important;}			
-</style>
+	<style>
+	#think_page_trace_open{left: 0 !important;
+	right: initial !important;}			
+	</style>
 </if>
 
 </head>
