--- a/source/Application/Footstone/View/default/Public/login.html
+++ b/source/Application/Footstone/View/default/Public/login.html
@@ -48,7 +48,7 @@
 						</div>
 					</li>
 					<li>
-						<input class="input" type="text" name="verify" placeholder="请输入验证码" />
+						<input class="input" type="text" name="verify" required placeholder="请输入验证码" />
 					</li>
 				</ul>
 				<div id="login_btn_wraper">
