--- a/source/Application/Footstone/View/default/Index/Index.html
+++ b/source/Application/Footstone/View/default/Index/Index.html
@@ -11,28 +11,28 @@
 <meta name="description" content="This is page-header (.page-header &gt; h1)">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="__CSS__/reset.css?{$js_debug}" rel="stylesheet">
-<link href="__STATIC__/bootstrap/css/bootstrap.min.css?{$js_debug}" rel="stylesheet">
-<link href="__STATIC__/bootstrap/css/bootstrap-responsive.min.css?{$js_debug}" rel="stylesheet">
-<link rel="stylesheet" href="__CSS__/font-awesome.min.css?{$js_debug}">
+<link href="__CSS__/reset.css" rel="stylesheet">
+<link href="__STATIC__/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="__STATIC__/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+<link rel="stylesheet" href="__CSS__/font-awesome.min.css">
 <!--[if IE ]>
 		  <link rel="stylesheet" href="__CSS__/font-awesome-ie7.min.css?{$js_debug}" />
 <![endif]-->
 
-<link rel="stylesheet" href="__CSS__/prettify.css?{$js_debug}">
+<link rel="stylesheet" href="__CSS__/prettify.css">
 <link rel="stylesheet" href="__CSS__/css">
-<link rel="stylesheet" href="__CSS__/ace.min.css?{$js_debug}">
+<link rel="stylesheet" href="__CSS__/ace.min.css">
 
 
-<link rel="stylesheet" href="__CSS__/ace-responsive.min.css?{$js_debug}">
-<link rel="stylesheet" href="__CSS__/ace-skins.min.css?{$js_debug}">
+<link rel="stylesheet" href="__CSS__/ace-responsive.min.css">
+<link rel="stylesheet" href="__CSS__/ace-skins.min.css">
 
 <!--[if lte IE 8]>
 		  <link rel="stylesheet" href="__CSS__/ace-ie.min.css?{$js_debug}" />
 		<![endif]-->
-<link rel="stylesheet" href="__CSS__/style_new.css?{$js_debug}">
-<link rel="stylesheet" href="__CSS__/theme_blue.css?{$js_debug}">
-<link rel="stylesheet" href="__CSS__/hack.css?{$js_debug}">
+<link rel="stylesheet" href="__CSS__/style_new.css">
+<link rel="stylesheet" href="__CSS__/theme_blue.css">
+<link rel="stylesheet" href="__CSS__/hack.css">
 
 <if condition="APP_DEBUG">
 <style>
@@ -159,21 +159,21 @@ right: initial !important;}
 		</div>
 	</div>
 	
-			<script src="__STATIC__/jquery-1.7.2.min.js?{$js_debug}"></script>
+			<script src="__STATIC__/jquery-1.7.2.min.js"></script>
 	
 			<script type="text/javascript">
 				if("ontouchend" in document) document.write("<script src='__STATIC__/jquery.mobile.custom.min.js'>"+"<"+"/script>");
 			</script>
 
-			<script src="__STATIC__/bootstrap/js/bootstrap.min.js?{$js_debug}"></script>
+			<script src="__STATIC__/bootstrap/js/bootstrap.min.js"></script>
 
-			<script src="__JS__/prettify.js?{$js_debug}"></script>
+			// <script src="__JS__/prettify.js"></script>
 
-			<script src="__JS__/ace-elements.min.js?{$js_debug}"></script>
-			<script src="__JS__/ace.min.js?{$js_debug}"></script>
-			<script src="__STATIC__/jquery.nicescroll.js?{$js_debug}"></script>
-			<script src="__JS__/script.js?{$js_debug}"></script>
-			<script src="__JS__/index.js?{$js_debug}"></script>
+			// <script src="__JS__/ace-elements.min.js"></script>
+			// <script src="__JS__/ace.min.js"></script>
+
+			<script src="__STATIC__/jquery.nicescroll.js"></script>
+			<script src="__JS__/index.js"></script>
 
 
 
