--- a/source/Application/Footstone/View/default/Index/Index.html
+++ b/source/Application/Footstone/View/default/Index/Index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="This is page-header (.page-header &gt; h1)">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="__CSS__/reset.css" rel="stylesheet">
+<link rel="stylesheet" href="__CSS__/reset.css">
 <link href="__STATIC__/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="__STATIC__/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link rel="stylesheet" href="__CSS__/font-awesome.min.css">
@@ -20,16 +20,16 @@
 <![endif]-->
 
 <link rel="stylesheet" href="__CSS__/prettify.css">
-<link rel="stylesheet" href="__CSS__/css">
+<!-- <link rel="stylesheet" href="__CSS__/css"> -->
 <link rel="stylesheet" href="__CSS__/ace.min.css">
-
+<!--[if lte IE 8]>
+		  <link rel="stylesheet" href="__CSS__/ace-ie.min.css?{$js_debug}" />
+<![endif]-->
 
 <link rel="stylesheet" href="__CSS__/ace-responsive.min.css">
 <link rel="stylesheet" href="__CSS__/ace-skins.min.css">
 
-<!--[if lte IE 8]>
-		  <link rel="stylesheet" href="__CSS__/ace-ie.min.css?{$js_debug}" />
-		<![endif]-->
+
 <link rel="stylesheet" href="__CSS__/style_new.css">
 <link rel="stylesheet" href="__CSS__/theme_blue.css">
 <link rel="stylesheet" href="__CSS__/hack.css">
@@ -50,13 +50,14 @@ var GV = {
 <php>foreach($submenus as $menu){ </php>
 					<li>
 						<php>if(empty($menu->items)){</php>
-							<a href="javascript:openapp('{$menu:url}','{$menu:id}','{$menu:title}');">
-								<i class="fa fa-{$menu:icon|default='desktop'}"></i>
+							<php>$urlpath = U($menu->url)</php>
+							<a href="javascript:openapp('{$urlpath}','{$menu:id}','{$menu:title}');">
+								<i class="fa fa-desktop"></i>
 								<span class="menu-text">{$menu:title}</span>
 							</a>
 						<php>}else{</php>
 							<a href="#" class="dropdown-toggle">
-								<i class="fa fa-{$menu:icon|default='desktop'}"></i>
+								<i class="fa fa-desktop"></i>
 								<span class="menu-text">{$menu:title}</span>
 								<b class="arrow fa fa-angle-down"></b>
 							</a>
@@ -73,7 +74,8 @@ var GV = {
 <php>foreach($submenus as $menu){</php>
 					<li>
 						<php>if(empty($menu->items)){</php>
-							<a href="javascript:openapp(':u({$menu:url})','{$menu:id}','{$menu:title}');">
+							<php>$urlpath = U($menu->url)</php>
+							<a href="javascript:openapp('{$urlpath}','{$menu:id}','{$menu:title}');">
 								<i class="fa fa-angle-double-right"></i>
 								<span class="menu-text">{$menu:title}</span>
 							</a>
@@ -96,7 +98,8 @@ var GV = {
 <php>function getsubmenu2($submenus){</php>
 <php>foreach($submenus as $menu){</php>
 					<li>
-						<a href="javascript:openapp(':u({$menu:url})','{$menu:id}','{$menu:title}');">
+						<php>$urlpath = U($menu->url)</php>
+						<a href="javascript:openapp('{$urlpath}','{$menu:id}','{$menu:title}');">
 								<i class="fa fa-leaf"></i>
 								<span class="menu-text">{$menu:title}</span>
 							</a>
