--- a/source/Application/Footstone/View/default/Index/Index.html
+++ b/source/Application/Footstone/View/default/Index/Index.html
@@ -42,7 +42,7 @@ var GV = {
     TOKEN: ""
 };
 </script>
-<php>$submenus=(array)json_decode($SUBMENU_CONFIG);</php>
+<php>$submenus=json_decode($SUBMENU_CONFIG);</php>
 
 
 <php>function getsubmenu($submenus){</php>
@@ -50,14 +50,15 @@ var GV = {
 <php>foreach($submenus as $menu){ </php>
 					<li>
 						<php>if(empty($menu->items)){</php>
-							<a href="javascript:openapp('{$menu:url}','{$menu:id}','{$menu:title}');">
-								<i class="fa fa-{$menu:icon|default='desktop'}"></i>
-								<span class="menu-text">{$menu:title}</span>
+							<php>$urlpath=U($menu->furl)</php>
+							<a href="javascript:openapp('{$urlpath}','{$menu:fid}','{$menu:ftitle}');">
+								<i class="fa fa-desktop"></i>
+								<span class="menu-text">{$menu:ftitle}</span>
 							</a>
 						<php>}else{</php>
 							<a href="#" class="dropdown-toggle">
-								<i class="fa fa-{$menu:icon|default='desktop'}"></i>
-								<span class="menu-text">{$menu:title}</span>
+								<i class="fa fa-desktop"></i>
+								<span class="menu-text">{$menu:ftitle}</span>
 								<b class="arrow fa fa-angle-down"></b>
 							</a>
 							<ul  class="submenu">
@@ -73,14 +74,15 @@ var GV = {
 <php>foreach($submenus as $menu){</php>
 					<li>
 						<php>if(empty($menu->items)){</php>
-							<a href="javascript:openapp(':u({$menu:url})','{$menu:id}','{$menu:title}');">
+								<php>$urlpath=U($menu->furl)</php>
+								<a href="javascript:openapp('{$urlpath}','{$menu:fid}','{$menu:ftitle}');">
 								<i class="fa fa-angle-double-right"></i>
-								<span class="menu-text">{$menu:title}</span>
+								<span class="menu-text">{$menu:ftitle}</span>
 							</a>
 						<php>}else{</php>
 							<a href="#" class="dropdown-toggle">
 								<i class="fa fa-angle-double-right"></i>
-								<span class="menu-text">{$menu:title}</span>
+								<span class="menu-text">{$menu:ftitle}</span>
 								<b class="arrow fa fa-angle-down"></b>
 							</a>
 							<ul  class="submenu">
@@ -96,9 +98,10 @@ var GV = {
 <php>function getsubmenu2($submenus){</php>
 <php>foreach($submenus as $menu){</php>
 					<li>
-						<a href="javascript:openapp(':u({$menu:url})','{$menu:id}','{$menu:title}');">
+							<php>$urlpath=U($menu->furl)</php>
+							<a href="javascript:openapp('{$urlpath}','{$menu:fid}','{$menu:ftitle}');">
 								<i class="fa fa-leaf"></i>
-								<span class="menu-text">{$menu:title}</span>
+								<span class="menu-text">{$menu:ftitle}</span>
 							</a>
 					</li>
 					
@@ -132,7 +135,7 @@ right: initial !important;}
 						<a data-toggle="dropdown" href="#" class="dropdown-toggle">
 							<img class="nav-user-photo" src="__IMG__/user.jpg" alt="{$admin.user_login}">
 							<span class="user-info">
-								<small>欢迎,</small>{$admin.user_nicename|default=$admin[user_login]}
+								<small>欢迎,</small>{$CURRENT_USER.fcode}[{$CURRENT_USER.fname}]
 							</span>
 							<i class="fa fa-caret-down"></i>
 						</a>
