--- a/source/Application/Footstone/View/default/Menu/edit.html
+++ b/source/Application/Footstone/View/default/Menu/edit.html
@@ -1,4 +1,6 @@
-<admintpl file="header"/>
+<include file="Public/header"/>
+</head>
+
 <body class="J_scroll_fixed">
 <div class="wrap jj">
   <admintpl file="nav"/>
@@ -73,6 +75,4 @@
     </form>
   </div>
 </div>
-<script src="__ROOT__/statics/js/common.js{$js_debug}"></script>
-</body>
-</html>
+<include file="Public/footer"/>
