--- a/source/Application/Footstone/View/default/Menu/index.html
+++ b/source/Application/Footstone/View/default/Menu/index.html
@@ -1,9 +1,11 @@
-<admintpl file="header"/>
+<include file="Public/header"/>
+</head>
+
 <body class="J_scroll_fixed">
 <div class="wrap J_check_wrap">
   	<div class="nav">
     <ul class="cc">
-      <li class="current"><a href="{:U('menu/index')}">后台菜单</a></li>
+      <li class="current"><a href="{:U('menu/index')}">后台菜单管理</a></li>
       <li><a href="{:U('menu/add')}">添加菜单</a></li>
       <if condition="APP_DEBUG">
       	<li><a href="{:U('menu/lists')}">所有菜单</a></li>
@@ -36,6 +38,4 @@
     </div>
   </form>
 </div>
-<script src="__ROOT__/statics/js/common.js{$js_debug}"></script>
-</body>
-</html>
+<include file="Public/footer"/>
