--- a/source/Application/Footstone/View/default/Public/login.html
+++ b/source/Application/Footstone/View/default/Public/login.html
@@ -36,7 +36,7 @@
 			<div class="login">
 				<ul>
 					<li>
-						<input class="input" id="ft_AdminName" required name="username" type="text" placeholder="帐号名" title="帐号名" />
+						<input class="input" id="ft_AdminName" required name="usercode" type="text" placeholder="帐号名" title="帐号名" />
 					</li>
 					<li>
 						<input class="input" id="ft_AdminPWD" type="password" required name="password" placeholder="密码" title="密码" />
