--- a/source/Application/Footstone/View/default/User/edit.html
+++ b/source/Application/Footstone/View/default/User/edit.html
@@ -1,36 +1,35 @@
-<admintpl file="header"/>
+<include file="Public/header"/>
+</head>
 <body class="J_scroll_fixed">
 <div class="wrap jj">
   <admintpl file="nav"/>
   <div class="common-form">
-    <form method="post" class="J_ajaxForm" action="{:U('User/edit_post')}">
+    <form method="post" class="J_ajaxForm" action="{:U('User/edit')}">
       <div class="h_a">基本属性</div>
       <div class="table_list">
         <table cellpadding="0" cellspacing="0" class="table_form" width="100%">
           <tbody>
             <tr>
-              <td>用户名:</td>
-              <td><input type="text" class="input" name="user_login" value="{$user_login}"></td>
+              <td>用户代码:</td>
+              <td><input type="text" class="input" name="fusercode" value="{$fusercode}"></td>
             </tr>
             <tr>
-              <td>密码:</td>
-              <td><input type="password" class="input" name="user_pass" value="" placeholder="******"></td>
-            </tr>
+              <td>用户名称:</td>
+              <td><input type="text" class="input" name="fusername" value="{$fusername}"></td>
+            </tr>            
             <tr>
               <td>邮箱:</td>
-              <td><input type="text" class="input" name="user_email" value="{$user_email}"></td>
+              <td><input type="text" class="input" name="femail" value="{$femail}"></td>
             </tr>
             <tr>
-              <td>角色:</td>
-              <td>
- 				<select name="role_id" class="normal_select">
- 					<foreach name="roles" item="vo">
- 					<php>$role_id_selected=$vo['id']==$role_id?"selected":"";</php>
- 						<option value="{$vo.id}" {$role_id_selected}>{$vo.name}</option>
- 					</foreach>
-                </select>
-				</td>
+              <td>手机号:</td>
+              <td><input type="text" class="input" name="fmobile" value="{$fmobile}"></td>
             </tr>
+            <tr>
+              <td>备注:</td>
+              <td><input type="text" class="input" name="fremark" value="{$fremark}"></td>
+            </tr>
+
           </tbody>
         </table>
       </div>
@@ -44,6 +43,5 @@
     </form>
   </div>
 </div>
-<script src="__ROOT__/statics/js/common.js{$js_debug}"></script>
-</body>
-</html>
+
+<include file="Public/footer"/>
