--- a/source/Application/Footstone/View/default/User/index.html
+++ b/source/Application/Footstone/View/default/User/index.html
@@ -1,10 +1,12 @@
-<admintpl file="header"/>
+<include file="Public/header"/>
+</head>
+
 <body class="J_scroll_fixed">
 <div class="wrap J_check_wrap">
    <div class="nav">
     <ul class="cc">
-      <li class="current"><a href="{:U('user/index')}">管理员</a></li>
-      <li><a href="{:U('user/add')}">添加管理员</a></li>
+      <li class="current"><a href="{:U('user/index')}">用户管理</a></li>
+      <li><a href="{:U('user/add')}">添加用户</a></li>
     </ul>
    </div>
    <div class="table_list">
@@ -12,11 +14,12 @@
         <thead>
           <tr>
             <td width="50">ID</td>
-            <td>用户名</td>
-            <td>所属角色</td>
+            <td>用户代码</td>
+            <td>用户名称</td>
             <td>最后登录IP</td>
             <td>最后登录时间</td>
             <td>E-mail</td>
+            <td>手机号</td>
             <td>备注</td>
             <td width="120">管理操作</td>
           </tr>
@@ -24,26 +27,27 @@
         <tbody>
         <foreach name="users" item="vo">
           <tr>
-            <td>{$vo.ID}</td>
-            <td>{$vo.user_login}</td>
-            <td>{$roles[$vo[role_id]]['name']}</td>
-            <td>{$vo.last_login_ip}</td>
+            <td>{$vo.fid}</td>
+            <td>{$vo.fusercode}</td>
+            <td>{$vo.fusername}</td>
+            <td>{$vo.flastloginip}</td>
             <td>
-            <if condition="$vo['last_login_time'] eq 0">
+            <if condition="$vo['flastlogintime'] eq 0">
             该用户还没登陆过
             <else />
-            {$vo.last_login_time}
+            {$vo.flastlogintime}
             </if>
             </td>
-            <td>{$vo.user_email}</td>
-            <td>{$vo.remark}</td>
+            <td>{$vo.femail}</td>
+            <td>{$vo.fmobile}</td>
+            <td>{$vo.fremark}</td>
             <td>
             <if condition="$vo['ID'] eq 1">
             <font color="#cccccc">修改</font> | 
             <font color="#cccccc">删除</font>
             <else />
-            <a href='{:U("user/edit",array("id"=>$vo[ID]))}'>修改</a> | 
-            <a class="J_ajax_del" href="{:U('user/delete',array('id'=>$vo['ID']))}">删除</a>
+            <a href='{:U("user/edit",array("id"=>$vo[fid]))}'>修改</a> | 
+            <a class="J_ajax_del" href="{:U('user/delete',array('id'=>$vo['fid']))}">删除</a>
             </if>
             </td>
           </tr>
@@ -52,6 +56,5 @@
       </table>
    </div>
 </div>
-<script src="__ROOT__/statics/js/common.js{$js_debug}"></script>
-</body>
-</html>
+
+<include file="Public/footer"/>
