--- a/source/Application/Footstone/View/default/Public/header.html
+++ b/source/Application/Footstone/View/default/Public/header.html
@@ -2,8 +2,16 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>系统后台</title>
+<!--  
 <link href="__CSS__/admin_style.css" rel="stylesheet" />
 <link href="__STATIC__/artDialog/skins/default.css" rel="stylesheet" />
+ -->
+ 
+ 
+<link href="__STATIC__/bootstrap3.0.3/css/bootstrap.min.css" rel="stylesheet" />
 
+ 
