--- a/source/Application/Footstone/View/default/User/add.html
+++ b/source/Application/Footstone/View/default/User/add.html
@@ -11,30 +11,34 @@
           <tbody>
             <tr>
               <td>用户代码:</td>
-              <td><input type="text" class="input" name="fusercode" value="{$fusercode}"></td>
+              <td><input type="text" class="input" name="fusercode" ></td>
             </tr>
             <tr>
               <td>用户名称:</td>
-              <td><input type="text" class="input" name="fusername" value="{$fusername}"></td>
+              <td><input type="text" class="input" name="fusername" ></td>
             </tr>            
             <tr>
             <tr>
               <td>密码:</td>
-              <td><input type="password" class="input" name="user_pass" value="" ></td>
+              <td><input type="password" class="input" name="fpassword" value="" ></td>
+            </tr>
+            <tr>
+              <td>重新输入密码:</td>
+              <td><input type="password" class="input" name="frepassword" value="" ></td>
             </tr>
             <tr>
               <td>邮箱:</td>
-              <td><input type="text" class="input" name="femail" value="{$femail}"></td>
+              <td><input type="text" class="input" name="femail" ></td>
             </tr>
             <tr>
               <td>手机号:</td>
-              <td><input type="text" class="input" name="fmobile" value="{$fmobile}"></td>
+              <td><input type="text" class="input" name="fmobile" ></td>
             </tr>
             <tr>
               <td>备注:</td>
-              <td><input type="text" class="input" name="fremark" value="{$fremark}"></td>
+              <td><input type="text" class="input" name="fremark" ></td>
             </tr>
-            
+                        
           </tbody>
         </table>
       </div>
