--- a/source/Application/Footstone/View/default/Public/footer.html
+++ b/source/Application/Footstone/View/default/Public/footer.html
@@ -1,5 +1,8 @@
 
-<script src="__STATIC__/jquery-1.7.2.min.js"></script>
-<script src="__JS__/common.js"></script> 
+<script src="__STATIC__/jquery-1.10.2.min.js"></script>
+<script src="__STATIC__/bootstrap3.0.3/js/bootstrap.min.js"></script>
+<!-- 
+<script src="__JS__/common.js"></script>
+ --> 
 </body>
 </html>
