--- a/source/Application/Footstone/View/default/User/index.html
+++ b/source/Application/Footstone/View/default/User/index.html
@@ -1,16 +1,96 @@
 <include file="Public/header"/>
 </head>
 
-<body class="J_scroll_fixed">
-<div class="wrap J_check_wrap">
-   <div class="nav">
-    <ul class="cc">
-      <li class="current"><a href="{:U('user/index')}">用户管理</a></li>
-      <li><a href="{:U('user/add')}">添加用户</a></li>
-    </ul>
-   </div>
-   <div class="table_list">
-   <table width="100%" cellspacing="0">
+<body >
+
+    <div class="navbar navbar-inverse" role="navigation">
+        <div class="navbar-header">
+          <button type="btn btn-navbar" class="navbar-toggle" data-toggle="collapse" data-target="#useradmin">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">用户管理</a>
+        </div>
+        <div class="navbar-collapse collapse" id="useradmin">
+        	<button class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#md-useradd">添加</button>
+		    <form class="navbar-form navbar-right" role="search">
+		      <div class="form-group">
+		        <input type="text" class="form-control" placeholder="Search">
+		      </div>
+		      <button type="submit" class="btn btn-success">页内查找</button>
+		    </form>
+        </div><!--/.navbar-collapse -->
+
+    </div>
+    
+   
+   
+	<!-- Modal -->
+	<div class="modal fade" id="md-useradd" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	        <h2 class="modal-title" id="myModalLabel">新增用户</h2>
+	      </div>
+	      <div class="modal-body">
+	        
+		    <form class="form-horizontal" role="form" id="ft_useraddform" action="{:U('user/add')}" method="post">
+			    <div class="form-group">
+				    <label class=" col-sm-2 control-label" for="usercode">用户代码</label>
+				    <div class="col-sm-4">
+					    <input type="text" class="form-control" id="usercode"  name="fusercode" placeholder="代码">
+				    </div>
+				    <label class="col-sm-2 control-label" for="username">用户名称</label>
+				    <div class="col-sm-4">
+					    <input type="text" class="form-control"  id="username"  name="fusername" placeholder="代码">
+				    </div>
+			    </div>			    
+			    <div class="form-group">
+				    <label class="col-sm-2 control-label" for="inputPassword">密码</label>
+				    <div class="col-sm-4">
+				    <input type="password" class="form-control" id="inputPassword"  name="fpassword" placeholder="Password">
+				    </div>
+				    <label class="col-sm-2 control-label" for="rePassword">确认密码</label>
+				    <div class="col-sm-4">
+				    <input type="password" class="form-control" id="rePassword"  name="frepassword" placeholder="Password">
+				    </div>
+				</div>
+			    <div class="form-group">
+				    <label class="col-sm-2 control-label" for="email">邮箱</label>
+				    <div class="col-sm-10">
+				    <input type="email" class="form-control" id="email"  name="femail" placeholder="邮箱">
+				    </div>
+				</div>								
+			    <div class="form-group">
+				    <label class="col-sm-2 control-label" for="mobile">手机</label>
+				    <div class="col-sm-10">
+				    <input type="text" class="form-control" id="mobile" name="fmobile" placeholder="手机号">
+				    </div>
+				</div>		
+			    <div class="form-group">
+				    <label class="col-sm-2 control-label" for="remark">备注</label>
+				    <div class="col-sm-10">
+				    <input type="text" class="form-control" id="remark" name="fremark" placeholder="备注">
+				    </div>
+				</div>
+				<div id="ft_addUserMsg" class="form-group"></div>								
+		    </form>	        
+	        
+	      </div>
+	      <div class="modal-footer">
+	      	<button type="button" class="btn btn-danger pull-left" id="ft_SaveandNew" >保存并新增</button>
+	        <button type="button" class="btn btn-default" data-dismiss="modal" id="ft_cancel">取消</button>
+	        <button type="button" class="btn btn-primary" id="ft_Save">保存</button>
+	        
+	      </div>
+	    </div><!-- /.modal-content -->
+	  </div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->   
+	
+   <table class='table table-bordered'>
         <thead>
           <tr>
             <td width="50">ID</td>
@@ -46,15 +126,24 @@
             <font color="#cccccc">修改</font> | 
             <font color="#cccccc">删除</font>
             <else />
-            <a href='{:U("user/edit",array("id"=>$vo[fid]))}'>修改</a> | 
-            <a class="J_ajax_del" href="{:U('user/delete',array('id'=>$vo['fid']))}">删除</a>
+            <a href='{:U("user/edit",array("fid"=>$vo[fid]))}'>修改</a> | 
+            <a class="J_ajax_del" href="{:U('user/delete',array('fid'=>$vo['fid']))}">删除</a>
             </if>
             </td>
           </tr>
          </foreach>
         </tbody>
       </table>
-   </div>
-</div>
-
-<include file="Public/footer"/>
+<script src="__STATIC__/jquery-1.10.2.min.js"></script>
+<script src="__STATIC__/bootstrap3.0.3/js/bootstrap.min.js"></script>
+<script>
+$(function(){
+	$("#ft_Save").click(function(){
+		$.post($("#ft_useraddform").attr('action'),$("#ft_useraddform").serialize(),function(data,textStatus){
+			$("#ft_addUserMsg").html(data);
+		});
+	});
+})
+</script>
+</body>
+</html>
